Code cleaned.